--- a/vercel.json
+++ b/vercel.json
@@ -9,14 +9,14 @@
     },
     "builds": [
         {
-            "src": "dist/main.js",
+            "src": "src/main.ts",
             "use": "@vercel/node"
         }
     ],
     "routes":[
         {
-            "src": "/.*",
-            "dest": "dist/main.js",
+            "src": "(.*)",
+            "dest": "src/main.ts",
             "methods": ["GET", "POST", "PUT", "DELETE"]
         }
     ]
