--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
     "version": 2,
-    "env": {
-        "DATABASE_HOST": "DATABASE_HOST",
-        "DATABASE_PORT":"DATABASE_PORT",
-        "DATABASE_USERNAME":"DATABASE_USERNAME",
-        "DATABASE_PASSWORD":"DATABASE_PASSWORD",
-        "DATABASE_DATABASE":"DATABASE_DATABASE"
-    },
     "builds": [
         {
             "src": "src/main.ts",
@@ -16,8 +9,7 @@
     "routes":[
         {
             "src": "(.*)",
-            "dest": "src/main.ts",
-            "methods": ["GET", "POST", "PUT", "DELETE"]
+            "dest": "src/main.ts"
         }
     ]
 }
