--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --config ./jest.config.ts", 
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:create": "ts-node node_modules/typeorm/cli.js migration:create ./src/infra/typeorm/migration/$npm_config_name",
     "migrate": "ts-node node_modules/typeorm/cli.js migration:run -d src/infra/typeorm/migration-config.ts",
-    "migration:down": "ts-node node_modules/typeorm/cli.js migration:revert -d src/infra/typeorm/migration-config.ts"
+    "migration:down": "ts-node node_modules/typeorm/cli.js migration:revert -d src/infra/typeorm/migration-config.ts",
+    "prepare": "husky"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -51,6 +51,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^9.1.5",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
